--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,7 @@
 
 <h1>Listing articles</h1>
  
+<%= link_to 'New article', new_article_path %>
 <table>
   <tr>
     <th>Title</th>
@@ -12,6 +13,7 @@
       <td><%= article.title %></td>
       <td><%= article.text %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
+      <td><%= link_to 'Edit', edit_article_path(article) %></td>
     </tr>
   <% end %>
 </table>
